gitops/kustomize/poll-modem/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-modem
  namespace: poll-modem
  labels:
    app: poll-modem
spec:
  selector:
    app: poll-modem
  ports:
    - name: http
      port: 80
      targetPort: http
