gitops/kustomize/poll-modem/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: poll-modem
  namespace: poll-modem
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`modem.crib.scapegoat.dev`)
      kind: Rule
      services:
        - name: poll-modem
          port: 80
  tls:
    secretName: crib-scapegoat-dev-tls
